<resources>
    <string name="app_name">ProyectoBase</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="correo_vacio">Ingrese un correo valido</string>
    <string name="password_vacio">Ingrese una contraseña valida</string>

    <!-- DATABASE FIREBASE -->
    <string name="registro_exitoso">Registro Exitoso</string>
    <string name="registro_error">Hubo un problema a la hora de Registrar</string>

    <!-- Todo el sistema -->
    <!-- activity_main.xml -->
    <string name="sistema_can">Sistema CanCare</string>
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="login_button">Iniciar Sesion</string>
    <string name="register_button">Registrarse</string>
    <string name="guest_button">Invitado</string>
    <string name="database">Base de datos creada</string>
    <string name="databaseError">Base de datos no creada</string>
    <string name="next_text">Ser Invitado</string>

    <!-- fragment_first.xml -->
    <string name="veterinaria">Veterinarias</string>
    <string name="lista_veter">Lista de Veterinarias </string>

    <!-- fragment_second.xml -->
    <string name="albergue">Albergues</string>
    <string name="lista_albergue">Lista de Albergues </string>
    <!-- fragment_third.xml -->
    <string name="grafica">Graficas</string>
    <string name="datos_grafica">Grafica de Cantidad de Veterinarias vs Distritos</string>
    <string name="datos_grafica2">Grafica de Cantidad de Albergues vs Distritos</string>

    <!-- bottom_navigation.xml -->
    <string name="veter">Veterinaria</string>
    <string name="shelter">Albergue</string>
    <string name="graph">Grafico</string>

    <!-- vista_detalle.xml -->
    <string name="detailTitle">VISTA DETALLE</string>
    <string name="detailName">Nombre : </string>
    <string name="detailPhone">Celular : </string>
    <string name="detailDistrito">Distrito : </string>
    <string name="detailEmail">Correo </string>
    <string name="detailCall">Añadir a contactos </string>
    <string name="detailSendEmail">Enviar Correo </string>
    <!-- Error -->
    <string name="emptyPhone">No hay un numero al cual agregar</string>
    <string name="emptyEmail">No hay un correo al cual enviar</string>
</resources>