<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ThirdFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:id="@+id/title_grafica"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/grafica"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/list_graficas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="100dp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_below="@+id/title_grafica"
            android:text="@string/datos_grafica"
            android:textStyle="bold"
            />

        <com.lab02.proyectobase.model.grafico.BarChartView
            android:id="@+id/barChart"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@color/green_dark"
            android:padding="16dp"

            android:layout_below="@+id/list_graficas"/>
        <TextView
            android:id="@+id/list_graficas2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="100dp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_below="@+id/barChart"
            android:text="@string/datos_grafica2"
            android:textStyle="bold"
            />
        <com.lab02.proyectobase.model.grafico.BarChartView
            android:id="@+id/barChart2"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@color/green_dark"
            android:padding="16dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/list_graficas2"/>

    </RelativeLayout>



</ScrollView>