<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>
        <variable
            name="viewModel"
            type="com.lab02.proyectobase.viewmodel.MenuViewModel" />

    </data>
    <androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".ui.vistaDetalleFragment">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingTop="20dp">

                        <TextView
                            android:id="@+id/titulo"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/poppins_medium"
                            android:text="@string/detailTitle"
                            android:textAlignment="center"
                            android:textSize="40sp"
                            android:background="@drawable/blue_fill__rounded_color"
                            android:textColor="@color/white" />

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:paddingTop="50dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:orientation="vertical"
                                android:paddingTop="20dp"
                                android:background="@drawable/blue_border_rounded_cornwe">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/green_dark"
                                    android:textAllCaps="true"
                                    android:text="@string/detailName" />
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@={viewModel.nombre}" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/green_dark"
                                    android:paddingTop="15dp"
                                    android:textAllCaps="true"
                                    android:text="@string/detailPhone" />
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@={viewModel.celular}" />
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/green_dark"
                                    android:paddingTop="15dp"
                                    android:textAllCaps="true"
                                    android:text="@string/detailDistrito" />
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@={viewModel.distrito}" />
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/green_dark"
                                    android:paddingTop="15dp"
                                    android:textAllCaps="true"
                                    android:text="@string/detailEmail" />
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@={viewModel.correo}" />
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/detailCall"
                                    android:layout_gravity="center"
                                    android:layout_marginLeft="62dp"
                                    android:layout_marginTop="10dp"
                                    android:layout_marginRight="62dp"
                                    android:background="@drawable/blue_fill__rounded_color"
                                    android:fontFamily="@font/poppins_medium"
                                    android:gravity="center"
                                    android:paddingTop="14dp"
                                    android:paddingBottom="14dp"
                                    android:textAllCaps="false"
                                    android:textColor="#ffffff"
                                    android:textSize="12sp"
                                    android:onClick="@{() -> viewModel.accionDetail(4)}"/>
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/detailSendEmail"
                                    android:onClick="@{() -> viewModel.accionDetail(5)}"
                                    android:layout_gravity="center"
                                    android:layout_marginLeft="62dp"
                                    android:layout_marginTop="10dp"
                                    android:layout_marginRight="62dp"
                                    android:background="@drawable/blue_fill__rounded_color"
                                    android:fontFamily="@font/poppins_medium"
                                    android:gravity="center"
                                    android:paddingTop="14dp"
                                    android:paddingBottom="14dp"
                                    android:textAllCaps="false"
                                    android:textColor="#ffffff"
                                    android:textSize="12sp"
                                    />
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"/>
                            </LinearLayout>

                        </androidx.cardview.widget.CardView>

                    </LinearLayout>
                    <!-- TODO: Update blank fragment layout -->


                </RelativeLayout>


            </FrameLayout>




    </ScrollView>
    </androidx.cardview.widget.CardView>
</layout>